--- a/package.json
+++ b/package.json
@@ -28,11 +28,14 @@
     "@fullcalendar/react": "5.10.1",
     "@fullcalendar/timegrid": "5.10.1",
     "@hookform/resolvers": "2.4.0",
+    "@mui/icons-material": "5.6.4",
     "@mui/lab": "5.0.0-alpha.80",
     "@mui/material": "5.6.4",
     "@mui/x-data-grid": "5.10.0",
+    "@mui/x-date-pickers": "^8.3.0",
     "@popperjs/core": "2.11.2",
     "@reduxjs/toolkit": "1.8.1",
+    "@tanstack/react-query": "^5.76.0",
     "apexcharts-clevision": "3.28.5",
     "aws-amplify": "4.3.22",
     "axios": "0.27.2",
@@ -42,6 +45,7 @@
     "clipboard-copy": "4.0.1",
     "clsx": "1.1.1",
     "date-fns": "2.27.0",
+    "dayjs": "^1.11.13",
     "draft-js": "0.11.7",
     "firebase": "9.7.0",
     "i18next": "21.7.1",
